--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -151,7 +151,7 @@
     </div>
 
     <footer>
-        © 2025 Library Management System
+        © 2025 Library Management System | Developed By Lucky Talaviya (202303103510435)
     </footer>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
